--- a/src/contactform/ContactForm.css
+++ b/src/contactform/ContactForm.css
@@ -1,9 +1,31 @@
 .ContactForm {
-  text-align: center;
+  background-color: #343d46;
+  color: #c0c5ce;
+
   min-height: 100vh;
+  font-size: calc(10px + 2vmin);
+
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
+}
+
+.ContactForm-header {
+  text-align: center;
+  max-width: 80vw;
+}
+
+.ContactForm-body {
+  background-color: #a7adba;
+  color: #343d46;
+
+  min-width: 80vw;
+  min-height: 70vh;
+  border-radius: 10px;
+
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
 }
