--- a/src/contactform/ContactForm.css
+++ b/src/contactform/ContactForm.css
@@ -17,15 +17,23 @@
 }
 
 .ContactForm-body {
-  background-color: #a7adba;
+  background-color: #c0c5ce;
   color: #343d46;
 
   min-width: 80vw;
-  min-height: 70vh;
+  min-height: 40vh;
   border-radius: 10px;
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+}
+
+.ContactForm-button {
+  background-color: #a7adba;
+  border-radius: 10px;
+  border: none;
+  padding: 10px;
+  pointer-events: all;
 }
