--- a/src/contactform/ContactForm.css
+++ b/src/contactform/ContactForm.css
@@ -3,12 +3,11 @@
   color: #c0c5ce;
 
   min-height: 100vh;
-  font-size: calc(10px + 2vmin);
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .ContactForm-header {
@@ -36,4 +35,19 @@
   border: none;
   padding: 10px;
   pointer-events: all;
+}
+
+.ContactForm-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: #c0c5ce;
+  color: #343d46;
+  min-height: 20vh;
+  width: 100%;
+}
+
+.ContactForm-footer > a {
+  color: #343d46;
 }
