--- a/src/contactform/ContactForm.css
+++ b/src/contactform/ContactForm.css
@@ -13,6 +13,7 @@
 .ContactForm-header {
   text-align: center;
   max-width: 80vw;
+  font-size: 1.5em;
 }
 
 .ContactForm-body {
@@ -44,7 +45,7 @@
 
   background-color: #c0c5ce;
   color: #343d46;
-  min-height: 20vh;
+  min-height: 12vh;
   width: 100%;
 }
 
