--- a/src/landing/Landing.css
+++ b/src/landing/Landing.css
@@ -1,6 +1,11 @@
-.Landing-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Landing {
+  min-height: 100vh;
+  background-color: #c0c5ce;
+  color: #343d46;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  text-align: center;
 }
 
 #Landing-scroll {
@@ -9,15 +14,10 @@
 }
 
 .Landing-hero {
-  font-size: 2em;
-  margin-bottom: 45vh;
+  margin-bottom: 42vh;
 }
 
-.Landing-header {
-  text-align: center;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  font-size: calc(10px + 2vmin);
+.Landing-hero > h1 {
+  font-size: 7em;
+  font-weight: 100;
 }
