--- a/src/contactform/ContactForm.css
+++ b/src/contactform/ContactForm.css
@@ -6,48 +6,23 @@
 
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
 }
 
-.ContactForm-header {
+.ContactForm > h1 {
   text-align: center;
-  max-width: 80vw;
-  font-size: 1.5em;
-}
-
-.ContactForm-body {
-  background-color: #c0c5ce;
-  color: #343d46;
-
-  min-width: 80vw;
-  min-height: 40vh;
-  border-radius: 10px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.ContactForm-button {
-  background-color: #a7adba;
-  border-radius: 10px;
-  border: none;
-  padding: 10px;
+  padding-top: 1.5em;
 }
 
 .ContactForm-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+  text-align: center;
   background-color: #c0c5ce;
   color: #343d46;
-  min-height: 12vh;
   width: 100%;
+  padding: 1em;
 }
 
 .ContactForm-footer > a {
   color: #343d46;
+  text-decoration: underline;
 }
