style - finishes color styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
-html {
-  scroll-behavior: smooth;
-}
-
+/* CSSReset do create-react-app */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
