--- a/src/contact/Contact.css
+++ b/src/contact/Contact.css
@@ -1,4 +1,4 @@
-.ContactForm {
+.Contact {
   background-color: #343d46;
   color: #c0c5ce;
 
@@ -9,12 +9,12 @@
   justify-content: space-between;
 }
 
-.ContactForm > h1 {
+.Contact > h1 {
   text-align: center;
   padding-top: 1.5em;
 }
 
-.ContactForm-footer {
+.Contact-footer {
   text-align: center;
   background-color: #c0c5ce;
   color: #343d46;
@@ -23,7 +23,7 @@
   margin-top: 1em;
 }
 
-.ContactForm-footer > a {
+.Contact-footer > a {
   color: #343d46;
   text-decoration: underline;
 }
