--- a/src/landing/Landing.css
+++ b/src/landing/Landing.css
@@ -2,17 +2,13 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   text-align: center;
 }
 
 #Landing-scroll {
   height: 5vh;
   width: auto;
-}
-
-.Landing-hero {
-  margin-bottom: 42vh;
 }
 
 .Landing-hero > h1 {
