--- a/src/landing/Landing.css
+++ b/src/landing/Landing.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  text-align: center;
+  align-items: center;
 }
 
 #Landing-scroll {
@@ -11,7 +11,19 @@
   width: auto;
 }
 
-.Landing-hero > h1 {
-  font-size: 7em;
+.Landing-hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+#Landing-hero-subtitle {
+  font-size: 2em;
+  max-width: 70vw;
+}
+
+#Landing-hero-title {
+  font-size: 9em;
   font-weight: 100;
 }
